category tabs overflow fixes
changed category tabs to pills, added extra space in case of tabs
overflowing, maximized width of tab bar using js

--- a/app/assets/stylesheets/categories.css.scss
+++ b/app/assets/stylesheets/categories.css.scss
@@ -33,3 +33,11 @@
 .category-grid-item {
     margin-bottom: 10px;
 }
+
+.search-bar {
+    float: right !important;
+}
+
+.categories-tabs {
+    margin-bottom: 40px !important;
+}
